--- a/MarioKartStarterColab.ipynb
+++ b/MarioKartStarterColab.ipynb
@@ -307,7 +307,7 @@
         "id": "br919AdzQIjO"
       },
       "source": [
-        "### **Grade and Download**"
+        "### **Download**"
       ]
     },
     {
