--- a/MarioKartStarterColab.ipynb
+++ b/MarioKartStarterColab.ipynb
@@ -152,7 +152,7 @@
         "verbose = True\n",
         "\n",
         "# Dataset will be collected in a directory called \"drive_data\".\n",
-        "utils.main(pytux, track, n_images=10000, steps_per_track=20000, aim_noise=0.1, vel_noise=5, verbose=verbose)"
+        "utils.main(pytux, track, n_images=10000, steps_per_track=20000, aim_noise_val=0.1, vel_noise_val=5, verbose=verbose)"
       ]
     },
     {
