--- a/MarioKartStarterColab.ipynb
+++ b/MarioKartStarterColab.ipynb
@@ -148,7 +148,7 @@
         "    pytux = utils.PyTux()\n",
         "\n",
         "# Modify any of the arguments below to tweak the generated dataset.\n",
-        "track = ['lighthouse']\n",
+        "track = ['lighthouse', 'zengarden', 'hacienda', 'snowtuxpeak', 'cornfield_crossing', 'scotland']\n",
         "verbose = True\n",
         "\n",
         "# Dataset will be collected in a directory called \"drive_data\".\n",
