--- a/MarioKartStarterColab.ipynb
+++ b/MarioKartStarterColab.ipynb
@@ -298,7 +298,7 @@
         "if 'pytux' not in locals():\n",
         "    pytux = utils.PyTux()\n",
         "\n",
-        "planner.test_planner(pytux, 'cocoa_temple', verbose=True)"
+        "planner.test_planner(pytux, ['cocoa_temple'], verbose=True)"
       ]
     },
     {
