--- a/MarioKartStarterColab.ipynb
+++ b/MarioKartStarterColab.ipynb
@@ -11,6 +11,18 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive/')"
+      ],
+      "metadata": {
+        "id": "GpKQDVGjlV-7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "FC_uY0jJ8pdK"
@@ -19,6 +31,38 @@
       "source": [
         "%pip install -U PySuperTuxKart"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "google_save_folder = \"/content/drive/MyDrive/CodeNext/MarioKart/\"\n",
+        "\n",
+        "# Create folder in Google Drive to store data.\n",
+        "if not os.path.exists(google_save_folder):\n",
+        "  print(\"Created the Google Drive folder specified above.\")\n",
+        "  os.mkdir(google_save_folder)"
+      ],
+      "metadata": {
+        "id": "juHzbx4_leWD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%capture\n",
+        "\n",
+        "# Install dependencies.\n",
+        "%pip install -r /content/drive/MyDrive/CodeNext/MarioKart/requirements.txt"
+      ],
+      "metadata": {
+        "id": "jUpVSam5li4N"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -32,6 +76,18 @@
         "\n",
         "Skip to the next section \"Training the Model\" if you already have `drive_data.zip`."
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd $google_save_folder\n",
+        "%ls"
+      ],
+      "metadata": {
+        "id": "pl-Gse7ClUcB"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -144,8 +200,8 @@
         "from project import utils; reload(utils)\n",
         "\n",
         "# Hack for notebooks.\n",
-        "if 'pytux' not in locals():\n",
-        "    pytux = utils.PyTux()\n",
+        "# if 'pytux' not in locals():\n",
+        "pytux = utils.PyTux()\n",
         "\n",
         "# Modify any of the arguments below to tweak the generated dataset.\n",
         "track = ['lighthouse', 'zengarden', 'hacienda', 'snowtuxpeak', 'cornfield_crossing', 'scotland']\n",
@@ -191,8 +247,7 @@
       },
       "source": [
         "## **Training the Model**\n",
-        "\n",
-        ""
+        "\n"
       ]
     },
     {
